--- a/CRUD/partials/home.html
+++ b/CRUD/partials/home.html
@@ -1,1 +1,22 @@
 <h3>Novo</h3>
+
+<table>
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Nome</th>
+      <th>E-mail</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="(key, value) in usuarios">
+      <td>{{key}}</td>
+      <td>{{v.nome}} {{v.sobrenome}}</td>
+      <td>{{v.email}}</td>
+      <td>
+        <a href="" ng-href="#/usuarios/editar/{{v.id}}"></a>
+      </td>
+    </tr>
+  </tbody>
+</table>
